# B3DFramework

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  arial.ttf_8_texpage_0.asset  tmpclaude-7209-cwd
Source/Plugins/ShaderBackends/bsfShaderBackendHLSL/: B3DBytecodeCompilerHLSL.cpp  B3DBytecodeCompilerHLSL.h  B3DHLSLShaderABI.h  B3DHLSLToDXBC.cpp  B3DHLSLToDXBC.h  CMakeLists.txt
Source/Plugins/ShaderBackends/bsfShaderBackendMSL/: B3DBytecodeCompilerMSL.cpp  B3DBytecodeCompilerMSL.h  B3DBytecodeCompilerMSL.mm  B3DMetalBytecodeLayout.h  B3DMetalShaderABI.h  CMakeLists.txt
Source/Plugins/Shared/BytecodeMSL/: B3DBytecodeCompilerMSL.h  B3DMetalBytecodeLayout.h  CMakeLists.txt
Source/Plugins/Shared/BytecodeMVKSL/: CMakeLists.txt  (+2 more)
Source/Plugins/bsfD3D12GpuBackend/: B3DD3D12BarrierUtility.cpp  B3DD3D12BarrierUtility.h  B3DD3D12Framebuffer.cpp  B3DD3D12Framebuffer.h  B3DD3D12GpuBackend.cpp  B3DD3D12GpuBuffer.cpp  B3DD3D12GpuBuffer.h  B3DD3D12GpuCommandBuffer.cpp  B3DD3D12GpuCommandBuffer.h  B3DD3D12GpuDevice.cpp  B3DD3D12GpuDevice.h  B3DD3D12GpuParameterSet.cpp  B3DD3D12GpuParameterSet.h  B3DD3D12GpuParameterSetPool.cpp  B3DD3D12GpuParameterSetPool.h  B3DD3D12GpuPipelineParameterLayout.cpp  B3DD3D12GpuPipelineParameterLayout.h  B3DD3D12GpuPipelineState.cpp  B3DD3D12GpuPipelineState.h  B3DD3D12GpuProgram.cpp  B3DD3D12GpuProgram.h  B3DD3D12GpuQueue.cpp  B3DD3D12GpuQueue.h  B3DD3D12GpuTimelineFence.cpp  B3DD3D12GpuTimelineFence.h  B3DD3D12Prerequisites.h  B3DD3D12Queries.cpp  B3DD3D12Queries.h  B3DD3D12RenderTexture.cpp  B3DD3D12RenderTexture.h  B3DD3D12RenderWindowSurface.cpp  B3DD3D12RenderWindowSurface.h  B3DD3D12Resource.cpp  B3DD3D12Resource.h  B3DD3D12ResourceTracker.cpp  B3DD3D12ResourceTracker.h  B3DD3D12SamplerState.cpp  B3DD3D12ShaderCompiler.cpp  B3DD3D12ShaderCompiler.h  B3DD3D12SwapChain.cpp  (+6 more)
Source/Plugins/bsfMetalGpuBackend/: B3DIMetalRenderWindowSurface.h  B3DIMetalRenderWindowSurface.mm  B3DMetalBarrierHelper.h  B3DMetalBarrierHelper.mm  B3DMetalEventQuery.mm  B3DMetalGpuBackend.cpp  B3DMetalGpuBackend.h  B3DMetalGpuBuffer.h  B3DMetalGpuBuffer.mm  B3DMetalGpuCommandBuffer.h  B3DMetalGpuCommandBuffer.mm  B3DMetalGpuCommandBufferPool.cpp  B3DMetalGpuCommandBufferPool.h  B3DMetalGpuDevice.h  B3DMetalGpuDevice.mm  B3DMetalGpuFrameCapture.h  B3DMetalGpuFrameCapture.mm  B3DMetalGpuParameterSet.h  B3DMetalGpuParameterSet.mm  B3DMetalGpuParameterSetPool.h  B3DMetalGpuParameterSetPool.mm  B3DMetalGpuPipelineParameterLayout.h  B3DMetalGpuPipelineParameterLayout.mm  B3DMetalGpuPipelineState.h  B3DMetalGpuPipelineState.mm  B3DMetalGpuProgram.h  B3DMetalGpuProgram.mm  B3DMetalGpuQueryPool.h  B3DMetalGpuQueryPool.mm  B3DMetalGpuQueue.h  B3DMetalGpuQueue.mm  B3DMetalGpuTimelineFence.h  B3DMetalGpuTimelineFence.mm  B3DMetalHeadlessRenderWindowSurface.h  B3DMetalHeadlessRenderWindowSurface.mm  B3DMetalHeapAllocator.h  B3DMetalHeapAllocator.mm  B3DMetalPrerequisites.h  B3DMetalRenderTexture.h  B3DMetalRenderWindowManager.cpp  (+15 more)
Source/Plugins/bsfVulkanGpuBackend/: B3DIVulkanRenderWindowSurface.cpp  B3DIVulkanRenderWindowSurface.h  B3DVulkanGpuBackend.cpp  B3DVulkanGpuBackend.h  B3DVulkanGpuBuffer.cpp  B3DVulkanGpuBuffer.h  B3DVulkanGpuCommandBuffer.cpp  B3DVulkanGpuCommandBuffer.h  B3DVulkanGpuDevice.cpp  B3DVulkanGpuDevice.h  B3DVulkanGpuParameterSet.cpp  B3DVulkanGpuParameterSet.h  B3DVulkanGpuPipelineState.cpp  B3DVulkanGpuProgram.cpp  B3DVulkanGpuProgram.h  B3DVulkanGpuQueue.cpp  B3DVulkanGpuQueue.h  B3DVulkanGpuTimelineFence.cpp  B3DVulkanGpuTimelineFence.h  B3DVulkanHeadlessRenderWindowSurface.cpp  B3DVulkanHeadlessRenderWindowSurface.h  B3DVulkanHeapBackend.cpp  B3DVulkanHeapBackend.h  B3DVulkanPrerequisites.h  B3DVulkanRenderPass.cpp  B3DVulkanRenderWindowSurface.cpp  B3DVulkanRenderWindowSurface.h  B3DVulkanResource.cpp  B3DVulkanResource.h  B3DVulkanResourceTracker.cpp  B3DVulkanResourceTracker.h  B3DVulkanSubmitThread.cpp  B3DVulkanSubmitThread.h  B3DVulkanSwapChain.cpp  B3DVulkanSwapChain.h  B3DVulkanTexture.cpp  B3DVulkanTexture.h  B3DVulkanUtility.cpp  B3DVulkanUtility.h  CMakeLists.txt
Source/Scripting/bsfMono/: B3DMonoArray.cpp  B3DMonoArray.h  B3DMonoAssembly.cpp  B3DMonoAssembly.h  B3DMonoClass.cpp  B3DMonoClass.h  B3DMonoExec.cpp  B3DMonoField.cpp  B3DMonoField.h  B3DMonoLoader.cpp  B3DMonoLoader.h  B3DMonoLoaderFunctions.h  B3DMonoManager.cpp  B3DMonoManager.h  B3DMonoMethod.cpp  B3DMonoMethod.h  B3DMonoPrerequisites.h  B3DMonoProperty.cpp  B3DMonoProperty.h  B3DMonoUtil.cpp  B3DMonoUtil.h  B3DScriptTypeMetaData.cpp  B3DScriptTypeMetaData.h  BsMonoArray.cpp  BsMonoArray.h  BsMonoAssembly.cpp  BsMonoAssembly.h  BsMonoClass.cpp  BsMonoClass.h  BsMonoExec.cpp  BsMonoField.cpp  BsMonoField.h  BsMonoLoader.cpp  BsMonoLoader.h  BsMonoManager.cpp  BsMonoManager.h  BsMonoMethod.cpp  BsMonoMethod.h  BsMonoPrerequisites.h  BsMonoProperty.cpp  (+8 more)
Source/Scripting/bsfScript/: B3DEngineScriptLibrary.cpp  B3DEngineScriptLibrary.h  B3DManagedComponent.cpp  B3DManagedComponent.h  B3DManagedResource.cpp  B3DManagedResource.h  B3DManagedResourceMetaData.cpp  B3DManagedResourceMetaData.h  B3DManagedTypeUtility.cpp  B3DManagedTypeUtility.h  B3DPlayInEditor.cpp  B3DPlayInEditor.h  B3DScriptEnginePrerequisites.h  B3DScriptGUIElementWrapper.h  B3DScriptGameObjectWrapper.cpp  B3DScriptGameObjectWrapper.h  B3DScriptNonReflectableWrapper.h  B3DScriptObjectManager.cpp  B3DScriptObjectManager.h  B3DScriptObjectWrapper.cpp  B3DScriptObjectWrapper.h  B3DScriptReflectableWrapper.cpp  B3DScriptReflectableWrapper.h  B3DScriptResourceManager.cpp  B3DScriptResourceManager.h  B3DScriptResourceWrapper.cpp  B3DScriptResourceWrapper.h  B3DScriptTypeDefinition.h  B3DScriptValueTypeWrapper.h  BsEngineScriptLibrary.cpp  BsEngineScriptLibrary.h  BsManagedComponent.cpp  BsManagedComponent.h  BsManagedResource.cpp  BsManagedResource.h  BsManagedResourceManager.cpp  BsManagedResourceManager.h  BsManagedResourceMetaData.cpp  BsManagedResourceMetaData.h  BsManagedTypeUtility.cpp  (+26 more)
Source/Tools/BansheeCookTool/: B3DBansheeCookTool.cpp  B3DShaderCooker.cpp  B3DShaderCooker.h  CMakeLists.txt
(+4612 files in other folders)
